--- a/CrudModulo4/nbproject/project.properties
+++ b/CrudModulo4/nbproject/project.properties
@@ -27,12 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/CrudModulo4.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jbcrypt-0.4.jar=..\\..\\..\\Downloads\\jbcrypt-0.4.jar
 file.reference.mysql-connector-java-8.0.30_1_.jar=..\\..\\..\\Downloads\\mysql-connector-java-8.0.30[1].jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.30_1_.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jbcrypt-0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
